Bug 427256 - "Scroll Control Arrows don't work when moved to the top" (Add missing check for arrow style) [p=mstange@themasta.com (Markus Stange) r=josh sr=roc a1.9=beltzner]