widget/src/cocoa/nsLookAndFeel.h
@@ -52,6 +52,7 @@ protected:
 
   // Apple hasn't defined a constant for scollbars with two arrows on each end, so we'll use this one.
   static const int kThemeScrollBarArrowsBoth = 2;
+  static const int kThemeScrollBarArrowsUpperLeft = 3;
 
 typedef enum {
   //theme accent variation colours on Mac OS,
